@@ -1,5 +1,6 @@
 1.1.0
   * Updated the lsl.imaging.deconv module to include a source-based CLEAN method and a forward-modeling/least squares method
+  * Added support for phase centers other than zenith to the varous functions in lsl.imaging.overlay
 
 1.0.3
   * Fixed a bug in the inspectTarball.py script that caused it to crash on TBN/TBW metadata
